k8s-configs/ping-cloud/base/pingaccess/admin/cloud-generic/statefulset.yaml
# This defines the pingaccess admin deployment.

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pingaccess-admin
  labels:
    cluster: pingaccess-cluster
    role: pingaccess-admin
spec:
  selector:
    matchLabels:
      role: pingaccess-admin
  replicas: 1
  serviceName: pingaccess-admin
  updateStrategy:
    type: RollingUpdate
  podManagementPolicy: OrderedReady
  template:
    metadata:
      name: pingaccess-admin
      labels:
        cluster: pingaccess-cluster
        role: pingaccess-admin
        entitled-app: "true"
        pod-reaper: enabled
      annotations:
        lastUpdateReason: "NA"
    spec:
      serviceAccountName: ping-serviceaccount
      containers:
      - name: pingaccess-p1as-sso
        securityContext:
          runAsGroup: 9999
          runAsNonRoot: true
          runAsUser: 9031
          allowPrivilegeEscalation: false
        image: 705370621539.dkr.ecr.us-west-2.amazonaws.com/pingcloud-services/p14c-integration:PDO-7340-ping-attribute
        imagePullPolicy: Always
        command: [ "/bin/sh","-c" ]
        # sso configuration has to be a sidecar instead of init container because it needs pingaccess api to be running
        # Add an infinite sleep after sso configuration so that pingaccess container continues to run
        args: [ "python3 -u /app/oauth_client_services_controller.py --app pingaccess && while true; do sleep 30; done" ]
      - name: pingaccess-admin
        image: public.ecr.aws/r2h3l6e4/pingcloud-apps/pingaccess/dev:v1.19-release-branch-latest
        imagePullPolicy: Always
        securityContext:
          runAsGroup: 9999
          runAsNonRoot: true
          runAsUser: 9031
          allowPrivilegeEscalation: false
        resources:
          requests:
            memory: "4Gi"
            cpu: 2
          limits:
            memory: "4Gi"
            cpu: 2
        volumeMounts:
        - name: ssh-dir
          mountPath: /home/ping/.ssh
        - name: shared-dir
          mountPath: /opt/shared-dir
        - name: topology-descriptor
          mountPath: /opt/staging/topology/descriptor.json
          subPath: descriptor.json
        - name: data-dir
          mountPath: /usr/local/bin/kubectl
          subPath: kubectl
        - name: data-dir
          mountPath: /opt/staging/hooks/logger.lib.sh
          subPath: logger.lib.sh
        - name: data-dir
          mountPath: /opt/staging/jmx_prometheus_javaagent-0.14.0.jar
          subPath: jmx_prometheus_javaagent-0.14.0.jar
        - name: data-dir
          mountPath: /opt/staging/newrelic.jar
          subPath: newrelic.jar
        - name: out-dir
          mountPath: /opt/out
        - name: pingaccess-license
          mountPath: /opt/in/instance/conf/pingaccess.lic
          subPath: pingaccess.lic
        - name: data-dir
          mountPath: /opt/staging/ds_env_vars
          subPath: ds_env_vars
        - name: upgrade-dir
          mountPath: /tmp/instance
          subPath: instance
        readinessProbe:
          exec:
            command: [ /opt/staging/hooks/85-pa-admin-readiness.sh ]
          initialDelaySeconds: 60
          periodSeconds: 5
          failureThreshold: 3
          timeoutSeconds: 5
        livenessProbe:
          exec:
            command: [ /opt/staging/hooks/99-pa-admin-liveness.sh ]
          initialDelaySeconds: 60
          periodSeconds: 30
          failureThreshold: 4
          timeoutSeconds: 5
        ports:
        - containerPort: 9000
        - containerPort: 9090
      securityContext:
        fsGroup: 9999
      volumes:
      - name: ssh-dir
        emptyDir: {}
      - name: shared-dir
        emptyDir: {}
      - name: data-dir
        emptyDir: {}
      - name: upgrade-dir
        emptyDir: {}
      - name: pingaccess-init
        configMap:
          name: pingcommon-init
          defaultMode: 0555
      - name: topology-descriptor
        configMap:
          name: topology-descriptor
          optional: true
          defaultMode: 0644
      - name: ssh-id-key-secret
        secret:
          secretName: ssh-id-key-secret
          optional: true
          defaultMode: 0400
      - name: known-hosts-config
        configMap:
          name: known-hosts-config
          optional: true
          defaultMode: 0644
      - name: out-dir
        persistentVolumeClaim:
          claimName: out-dir
      - name: pingaccess-license
        secret:
          secretName: pingaccess-license
          optional: true
          defaultMode: 0400
      - name: pingaccess-passwords
        secret:
          secretName: pingaccess-passwords
          optional: true
          defaultMode: 0400
  volumeClaimTemplates:
  - metadata:
      name: out-dir
      annotations:
        volume.autoscaler.kubernetes.io/ignore: "true"
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: pingaccess-gp3
      resources:
        requests:
          storage: 20Gi
